<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derived_app_name" translatable="false">Zim Launcher</string>
    <string name="app_version">Version</string>
    <string name="app_build">Build</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="wallpaper_pick">Pick Wallpaper</string>
    <string name="dialog__backup_app_settings__error">Something went wrong.</string>
    <string name="pref_category__interfaces">Interfaces</string>
    <string name="pref_category__inputs">Gestures and Search</string>
    <string name="pref_category__others">Others</string>
    <string name="pref_title__desktop">Desktop</string>
    <string name="pref_title__dock">Dock</string>
    <string name="pref_title__app_drawer">App drawer</string>
    <string name="pref_title__theme">Theme</string>
    <string name="pref_title__notifications">Gestures and Notifications</string>
    <string name="pref_title__developer">Developer options</string>
    <string name="pref_title__gestures">Gestures</string>
    <string name="pref_title__advanced">Advanced</string>
    <string name="pref_title__behavior">Behavior</string>
    <string name="pref_title__smartspace">Home Widget</string>
    <string name="pref_title__search">Search</string>
    <string name="pref_title__language">Language</string>
    <string name="pref_title__folder_badge_count">Show folder badge Count</string>
    <string name="pref_title__predictive_apps_num">Predicted apps number</string>
    <string name="pref_title__label_two_lines">Icon labels use two lines</string>
    <string name="pref_title__home_opens_drawer">Home button opens app drawer</string>
    <string name="pref_summary__app_drawer">Customize your app drawer</string>
    <string name="pref_summary__dock">Customize your dock</string>
    <string name="pref_summary__desktop">Customize your desktop</string>
    <string name="pref_summary__theme">Theme different elements</string>
    <string name="pref_summary__notifications">Notifications and Gestures</string>
    <string name="pref_summary__developer">Restart the app if it is needed</string>
    <string name="pref_summary__advanced">Language and backup</string>
    <string name="pref_summary__about">More information about Zim Launcher</string>
    <string name="pref_summary__inputs">Configure gestures</string>
    <string name="pref_summary__behavior">Change the behavior of ZimLX</string>
    <string name="pref_summary__smartspace">Date, time and search bar</string>
    <string name="pref_summary__search">Search Engine</string>
    <string name="pref_summary__home_opens_drawer">Pressing the home button while on the desktop will open the app drawer</string>
    <string name="pref_summary__language">Change language of this app</string>
    <string name="pref_summary__minibar">Configure the order and visibility of minibar items.</string>
    <string name="general_pref_title">Desktop</string>
    <string name="title__desktop_indicator_style">Indicator Style</string>
    <string name="desktop_indicator_mode_normal">Normal</string>
    <string name="desktop_indicator_mode_arrow">Arrow</string>
    <string name="desktop_indicator_mode_lines">Line</string>
    <string name="title__desktop_icon_scale">Icon scale</string>
    <string name="title__desktop_overlap">Overlap Placement</string>
    <string name="title__desktop_smartspace">Show Smart space widget</string>
    <string name="title__desktop_lock">Lock Desktop</string>
    <string name="title__desktop_full_width_widgets">Full width widgets</string>
    <string name="title__desktop_multiline_labels">Multiline app names</string>
    <string name="title__desktop_hide_icon_labels">Hide icon labels on home screen</string>
    <string name="title__desktop_grid_size">Grid Size</string>
    <string name="summary__desktop_overlap">Allow icons and widget to overlap</string>
    <string name="title_use_pill_qsb">Use pill style search bar</string>
    <string name="show_top_shadow_pref_title">Top shadow</string>
    <string name="show_top_shadow_pref_summary">Shadow under status bar</string>
    <string name="full_width_widgets_pref_summary">Allow widgets to span over the whole width without padding</string>
    <string name="grid_size_height">Height</string>
    <string name="grid_size_width">Width</string>
    <string name="minibar">Minibar</string>
    <string name="minibar_0">Change the minibar layout.</string>
    <string name="minibar_1">Set the desktop wallpaper.</string>
    <string name="minibar_4">Shortcut to device settings.</string>
    <string name="minibar_5">Shortcut to OpenLauncher settings.</string>
    <string name="minibar_7">Display all available volume sliders.</string>
    <string name="minibar_8">Open the app drawer.</string>
    <string name="minibar_10">Mobile network settings.</string>
    <string name="minibar_11">Applications Manager</string>
    <string name="pref_title__minibar">@string/minibar</string>
    <string name="title__minibar_background_color">Minibar Color</string>
    <string name="tab_bottom_sheet_save">Save</string>
    <string name="tab_hide_from_main">Hide from main tab</string>
    <string name="tab_color">Tab color</string>
    <string name="tab_manage_apps">Manage apps</string>
    <string name="delete">Delete</string>
    <string name="none">None</string>
    <string name="undo">Undo</string>
    <string name="name">Name</string>
    <string name="apps_label">Apps</string>
    <string name="custom">Custom</string>
    <string name="default_tab_name">New tab</string>
    <string name="show_in_tabs">Tabs</string>
    <string name="tabs_manage">Manage</string>
    <string name="dismiss_drop_target_label">"Don\’t show"</string>
    <string name="icon_badging_title">Enable Notifications</string>
    <string name="pref_category__notifications">Notifications</string>
    <string name="pref_category__gestures">Gestures</string>
    <string name="pref_title__notification_background_color">Notification Background Color</string>
    <string name="pref_title__notification_count">Show Notification Count</string>
    <string name="cat__app_icons">Icons</string>
    <string name="cat__app_search">Search Bar</string>
    <string name="cat__app_misc">Miscellanea</string>
    <string name="cat__app_layout">Layout and Appearance</string>
    <string name="cat__dock_icons">Shortcuts</string>
    <string name="title__app_spring">Spring effect</string>
    <string name="title__app_search">Show Search Bar</string>
    <string name="title__app_search_global">Global search in app drawer</string>
    <string name="title__app_search_hidden">Search hidden Apps</string>
    <string name="title__app_icon_scale">Icon scale</string>
    <string name="title__app_all_apps_opacity">Drawer opacity</string>
    <string name="title__layout_mode">Display Layout</string>
    <string name="title__layout_vertical">Vertical Grid</string>
    <string name="title__layout_horizontal">Horizontal Grid</string>
    <string name="title__layout_alphabetical">Alphabetical Grid</string>
    <string name="title__sort_mode">App Sort</string>
    <string name="title__sort_alphabetical_az">Alphabetical AZ</string>
    <string name="title__sort_alphabetical_za">Alphabetical ZA</string>
    <string name="title__sort_last_installed">Last Installed</string>
    <string name="title__sort_most_used">Most Used</string>
    <string name="title__sort_by_color">By Color</string>
    <string name="title__drawer_hide_apps">Hidden App Shortcuts</string>
    <string name="title__drawer_multiline_label">Multiline Labels</string>
    <string name="title__drawer_text_size">Text Size</string>
    <string name="title__drawer_label_color">All apps label color</string>
    <string name="title__drawer_columns">Number of columns</string>
    <string name="title__drawer_menu">Popup menu items</string>
    <string name="summary__app_search_hidden">Display hidden apps</string>
    <string name="title__hotseat_hide_button">Hide dock button</string>
    <string name="title__hotseat_two_row">Two row dock</string>
    <string name="title__hotseat_num_icons">Number of icons in dock</string>
    <string name="title__hotseat_show_arrow">Show arrow</string>
    <string name="title__dock_style">Dock style</string>
    <string name="title__dock_fill">Background</string>
    <string name="title__dock_shadow">Shadow</string>
    <string name="title__dock_radius">Corner rounding</string>
    <string name="title__dock_custom_opacity">Opacity</string>
    <string name="title__dock_scale">Dock scale</string>
    <string name="hotseat_show_page_indicator">Show page indicator</string>
    <string name="backups">Backups</string>
    <string name="backup_pref_summary">Save home screen, restore backups</string>
    <string name="action_open_notifications_class" translatable="false">org.zimmob.zimlx.gestures.handlers.NotificationsOpenGestureHandler</string>
    <string name="action_open_drawer_class" translatable="false">org.zimmob.zimlx.gestures.handlers.OpenDrawerGestureHandler</string>
    <string name="action_open_overview_class" translatable="false">org.zimmob.zimlx.gestures.handlers.OpenOverviewGestureHandler</string>
    <string name="action_do_nothing_class" translatable="false">org.zimmob.zimlx.gestures.BlankGestureHandler</string>
    <string name="gesture_press_home">Home button</string>
    <string name="gesture_press_back">Back button</string>
    <string name="gesture_double_tap">Double tap</string>
    <string name="gesture_long_press">Tap &amp; hold</string>
    <string name="gesture_swipe_down">Swipe down</string>
    <string name="gesture_swipe_up">Swipe up</string>
    <string name="gesture_dock_swipe_up">Swipe up on dock</string>
    <string name="action_assistant">Open assistant</string>
    <string name="title__behavior_widget_provider">Weather source</string>
    <string name="title__behavior_weather_units">Temperature unit</string>
    <string name="category__behavior_weather">Weather</string>
    <string name="smartspace_time">Show time</string>
    <string name="smartspace_date">Show time and date</string>
    <string name="in_smartspace">In \"At a Glance\" widget</string>
    <string name="title_show_google_app">Show Google app</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="title__folder_background">Folder Background</string>
    <string name="pref_title__folder">Search Engine and Folder</string>
    <string name="pref_summary__folder">Show search Engine and Folder settings</string>
    <string name="pref_show_assistant_summary">Display voice search button if supported</string>
    <string name="pref_show_as_assistant_summary">Display assistant button instead of voice search</string>
    <string name="pref_show_assistant_title">Voice search button</string>
    <string name="bubble_searchbar">Dual bubble search bar</string>
    <string name="pref_search_bar_radius">Search bar corner rounding</string>
    <string name="title__folder_google_color">Google Icon Color</string>
    <string name="title__about_donate">Donate</string>
    <string name="title__about_bug_reports">Report bugs</string>
    <string name="title__about_project_license">Project License</string>
    <string name="title__about_copy_build">Copy build information</string>
    <string name="title__about_source_code">Source Code</string>
    <string name="title__about_project_team">Project Team</string>
    <string name="title__about_open_source">Open Source Libraries</string>
    <string name="summary__about_donate">More information on donating or otherwise supporting this project</string>
    <string name="summary__about_bug_report">Give feedback, report bugs or suggest improvements</string>
    <string name="summary__about_contribute_code">Contribute code to the project. Everybody is welcome todo so, including newcomers</string>
    <string name="category__about_licenses">License</string>
</resources>