<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.zimmob.zimlx.preferences.StyledPreferenceCategory android:title="@string/pref_category__notifications">
        <org.zimmob.zimlx.preferences.ButtonPreference
            android:key="pref_icon_badging"
            android:persistent="false"
            android:title="@string/notification_dots_title"
            android:widgetLayout="@layout/notification_pref_warning"
            app:iconSpaceReserved="false">
            <intent android:action="android.settings.NOTIFICATION_SETTINGS">
                <!-- This extra highlights the "Allow notification dots" field in Notification settings -->
                <extra
                    android:name=":settings:fragment_args_key"
                    android:value="notification_badging" />
            </intent>
        </org.zimmob.zimlx.preferences.ButtonPreference>

        <org.zimmob.zimlx.preferences.StyledSwitchPreference
            android:defaultValue="false"
            android:dependency="pref_icon_badging"
            android:key="pref_notification_count"
            android:persistent="true"
            android:title="@string/pref_title__notification_count"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.preferences.StyledSwitchPreference
            android:defaultValue="true"
            android:key="pref_key__folder_badge_count"
            android:persistent="true"
            android:title="@string/pref_title__folder_badge_count"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.preferences.ColorPreferenceCompat
            android:defaultValue="@color/notification_background"
            android:key="pref_notification_background"
            android:title="@string/pref_title__notification_background_color"
            app:cpv_dialogTitle="@string/pref_title__notification_background_color"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />
    </org.zimmob.zimlx.preferences.StyledPreferenceCategory>

    <org.zimmob.zimlx.preferences.StyledPreferenceCategory android:title="@string/pref_category__gestures">
        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_do_nothing_class"
            android:key="pref_gesture_double_tap"
            android:persistent="true"
            android:title="@string/gesture_double_tap"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.DoubleTapGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_open_overview_class"
            android:key="pref_gesture_long_press"
            android:persistent="true"
            android:title="@string/gesture_long_press"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.LongPressGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_do_nothing_class"
            android:key="pref_gesture_press_home"
            android:persistent="true"
            android:title="@string/gesture_press_home"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.PressHomeGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_do_nothing_class"
            android:key="pref_gesture_press_back"
            android:persistent="true"
            android:title="@string/gesture_press_back"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.PressBackGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_open_notifications_class"
            android:key="pref_gesture_swipe_down"
            android:persistent="true"
            android:title="@string/gesture_swipe_down"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.VerticalSwipeGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_open_drawer_class"
            android:key="pref_gesture_swipe_up"
            android:persistent="true"
            android:title="@string/gesture_swipe_up"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.VerticalSwipeGesture"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.gestures.ui.GesturePreference
            android:defaultValue="@string/action_open_drawer_class"
            android:key="pref_gesture_dock_swipe_up"
            android:persistent="true"
            android:title="@string/gesture_dock_swipe_up"
            app:gestureClass="org.zimmob.zimlx.gestures.gestures.VerticalSwipeGesture"
            app:iconSpaceReserved="false" />
    </org.zimmob.zimlx.preferences.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>