<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:disableDependentsState="false"
        android:key="pref_smartspace"
        android:title="@string/title__desktop_smartspace"
        app:iconSpaceReserved="false" />

    <!--
    <org.zimmob.zimlx.preferences.PreviewPreference
        android:key="pref_smartspace_preview"
        android:dependency="pref_smartspace"
        app:previewLayout="@layout/smartspace_preview" />
    -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_enable_minus_one"
        android:summary="@string/pref_show_google_now_summary"
        android:title="@string/title_show_google_app"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="pref_use_pill_qsb"
        android:key="pref_smartspace_time"
        android:summary="@string/in_smartspace"
        android:title="@string/smartspace_time"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="pref_use_pill_qsb"
        android:key="pref_smartspace_date"
        android:summary="@string/in_smartspace"
        android:title="@string/smartspace_date"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_use_pill_qsb"
        android:dependency="pref_smartspace"
        android:title="@string/title_use_pill_qsb"
        android:disableDependentsState="true"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="prefCat_homewidgetWeather"
        android:title="@string/category__behavior_weather">

        <org.zimmob.zimlx.preferences.SmartspaceProviderPreference
            android:key="pref_smartspace_widget_provider"
            android:dependency="pref_smartspace"
            android:title="@string/title__behavior_widget_provider"
            android:summary="%s"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="metric"
            android:dependency="pref_smartspace_widget_provider"
            android:entries="@array/unitsTexts"
            android:entryValues="@array/unitsValues"
            android:key="pref_weather_units"
            android:summary="%s"
            android:title="@string/title__behavior_weather_units"
            app:iconSpaceReserved="false" />

        <org.zimmob.zimlx.preferences.SmartspaceProviderPreference
            android:key="pref_smartspace_event_provider"
            android:dependency="pref_use_pill_qsb"
            android:title="@string/title__behavior_event_provider"
            android:summary="%s"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>