<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.zimmob.zimlx.preferences.DockPresetPreference
        android:defaultValue="1"
        android:disableDependentsState="true"
        android:entries="@array/dockStyles"
        android:entryValues="@array/dockStyleValues"
        android:key="pref_dockPreset"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/title__dock_style"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockSwitchPreference
        android:dependency="pref_dockPreset"
        android:defaultValue="false"
        android:key="enableGradient"
        android:persistent="true"
        android:title="@string/title__dock_fill"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockSwitchPreference
        android:dependency="pref_dockPreset"
        android:key="enableShadow"
        android:defaultValue="false"
        android:persistent="true"
        android:title="@string/title__dock_shadow"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockSeekbarPreference
        android:dependency="pref_dockPreset"
        android:key="radius"
        android:persistent="true"
        android:title="@string/title__dock_radius"
        app:defaultSeekbarValue="8"
        app:maxValue="24"
        app:minValue="0"
        app:steps="24"
        app:summaryFormat="%.0fdp"
        app:summaryMultiplier="1"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockAutoModeSeekbarPreference
        android:dependency="pref_dockPreset"
        android:key="opacityPref"
        android:persistent="true"
        android:title="@string/title__dock_custom_opacity"
        app:maxValue="1"
        app:minValue="0"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.SeekbarPreference
        android:key="pref_dockScale"
        android:persistent="true"
        android:title="@string/title__dock_scale"
        app:defaultSeekbarValue="1.0"
        app:maxValue="1.25"
        app:minValue="0.75"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockSwitchPreference
        android:defaultValue="true"
        android:key="enableArrow"
        android:persistent="true"
        android:title="@string/title__hotseat_show_arrow"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_hotseatShowPageIndicator"
        android:persistent="true"
        android:title="@string/hotseat_show_page_indicator"
        app:iconSpaceReserved="false" />

    <org.zimmob.zimlx.preferences.DockGridSizePreference
        android:key="pref_dock_grid_size"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/title__hotseat_num_icons"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_twoRowDock"
        android:title="@string/title__hotseat_two_row"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref__hide_dock_button"
        android:persistent="true"
        android:title="@string/title__hotseat_hide_button"
        app:iconSpaceReserved="false" />

</PreferenceScreen>