<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_enable_minus_one"
        android:summary="@string/pref_show_google_now_summary"
        android:title="@string/title_show_google_app" />

    <SwitchPreference
        android:defaultValue="@bool/allow_rotation"
        android:key="pref_allowRotation"
        android:persistent="true"
        android:title="@string/allow_rotation_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_homeOpensDrawer"
        android:persistent="true"
        android:summary="@string/pref_summary__home_opens_drawer"
        android:title="@string/pref_title__home_opens_drawer" />
</PreferenceScreen>