<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <net.gsantner.opoc.preference.LanguagePreferenceCompat
        android:defaultValue=""
        android:icon="@drawable/ic_language"
        android:key="pref_key__language"
        android:summary="@string/pref_summary__language"
        android:title="@string/pref_title__language" />

    <Preference
        android:icon="@drawable/ic_import_export"
        android:key="backups"
        android:summary="@string/backup_pref_summary"
        android:title="@string/backups">

        <!--suppress AndroidDomInspection (Injected at compile time) -->
        <intent
            android:targetClass="org.zimmob.zimlx.backup.BackupListActivity"
            android:targetPackage="@string/application_id" />
    </Preference>
</androidx.preference.PreferenceScreen>